# LGHD

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/filters_640_480/: _#_640_480_001_00_00_00.nii  _#_640_480_001_00_01_00.nii  _#_640_480_001_00_02_00.nii  _#_640_480_001_00_03_00.nii  _#_640_480_001_00_04_00.nii  _#_640_480_001_00_05_00.nii  _#_640_480_001_01_00_00.nii  _#_640_480_001_01_01_00.nii  _#_640_480_001_01_02_00.nii  _#_640_480_001_01_03_00.nii  _#_640_480_001_01_04_00.nii  _#_640_480_001_01_05_00.nii  _#_640_480_001_02_00_00.nii  _#_640_480_001_02_01_00.nii  _#_640_480_001_02_02_00.nii  _#_640_480_001_02_03_00.nii  _#_640_480_001_02_04_00.nii  _#_640_480_001_02_05_00.nii  _#_640_480_001_03_00_00.nii  _#_640_480_001_03_01_00.nii  _#_640_480_001_03_02_00.nii  _#_640_480_001_03_03_00.nii  _#_640_480_001_03_04_00.nii  _#_640_480_001_03_05_00.nii  _#_640_480_001_04_06_01_033_160_075_100_0.bof
data/filters_640_512/: _#_640_512_001_00_00_00.nii  _#_640_512_001_00_01_00.nii  _#_640_512_001_00_02_00.nii  _#_640_512_001_00_03_00.nii  _#_640_512_001_00_04_00.nii  _#_640_512_001_00_05_00.nii  _#_640_512_001_01_00_00.nii  _#_640_512_001_01_01_00.nii  _#_640_512_001_01_02_00.nii  _#_640_512_001_01_03_00.nii  _#_640_512_001_01_04_00.nii  _#_640_512_001_01_05_00.nii  _#_640_512_001_02_00_00.nii  _#_640_512_001_02_01_00.nii  _#_640_512_001_02_02_00.nii  _#_640_512_001_02_03_00.nii  _#_640_512_001_02_04_00.nii  _#_640_512_001_02_05_00.nii  _#_640_512_001_03_00_00.nii  _#_640_512_001_03_01_00.nii  _#_640_512_001_03_02_00.nii  _#_640_512_001_03_03_00.nii  _#_640_512_001_03_04_00.nii  _#_640_512_001_03_05_00.nii  _#_640_512_001_04_06_01_033_160_075_100_0.bof
include/lghd_catkin/: lghd.h
src/: CMakeLists.txt  image_io.h  lghd.cc  lghd.h  log_gabor_filter_bank.cc  log_gabor_filter_bank.h  main.cc  math_functions.cc  math_functions.h  phase_congruency.cc  phase_congruency.h  types.h
src/examples/: CMakeLists.txt  lghd.cpp
src/filter_bank/: CMakeLists.txt  log_gabor_filter_bank.cpp
src/lghd/: lghd.cpp
src/phase_congruency/: CMakeLists.txt  phase_congruency.cpp  phase_congruency.h
